<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_for_fragment_for_NV"
    android:paddingTop="@dimen/padding_for_fragment_for_NV"
    android:paddingRight="@dimen/padding_for_fragment_for_NV"
    android:paddingBottom="@dimen/padding_for_fragment_for_NV"
    tools:context=".FragmentForNV">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <EditText
        android:id="@+id/edit_text_for_NV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSavePrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonLoadPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_load" />

        <Button
            android:id="@+id/buttonDeletePrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete" />
    </LinearLayout>

    <Button
        android:id="@+id/showImageFromInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_image_from_internet" />

    <ImageView
        android:id="@+id/imageFromInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>