<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textSize="25sp"
    tools:context=".CitiesListFragment">

    <TextView
        android:id="@+id/textview_description"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/choose_city" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/checkbox_feels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/checkbox_feels" />

    <CheckBox
        android:id="@+id/checkbox_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_pressure" />

    <CheckBox
        android:id="@+id/checkbox_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_humidity" />

</LinearLayout>